# job-radar-1.0-extract

./: README.md  pyproject.toml  release_pkg.sh  spotify_links.txt  upload_to_s3.py  wttj_links.txt
config/: definitions.py
crawler/crawler/spiders/: spotify.py  spotify_links.py  wttj.py  wttj_links.py
data_job_crawler/: upload_to_s3.py
data_job_crawler/config/: definitions.py
data_job_crawler/crawler/: items.py  pipelines.py  settings.py
data_job_crawler/crawler/spiders/: google_jobs.py  google_jobs_scrapy.py  oldjobs.py  oldwttj.py  wttj.py  wttj_links.py
data_job_crawler/crawler/spiders/data/: spotify_links.txt  wttj_links.txt
data_job_crawler/helpers/: s3_helper.py  upload_to_s3.py
diagram/: ingestion_diagram.py
